Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82430

Wrong rendering order of QtQuick elements

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.15
    • 5.15
    • Quick: 3D
    • None
    • 23d676455b87885db2d2e7e889e842fa2f97fa72
    • Qt Quick 3D - Week 11/12

      When multiple QtQuick elements (Text, Rectangle) etc. are inside a Node, they should probably respect QtQuick rendering order so latter element is rendered over earlier. With the attached tester QML it can be seen that first element will be rendered on top.

        For Gerrit Dashboard: QTBUG-82430
        # Subject Branch Project Status CR V

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes