Fix quick items rendering order

After these chages lancelot MultipleItems test renders correctly.
Also adding new test to confirm the rendering ordering with multiple
nodes and mixing 2D items with 3D models.

Task-number: QTBUG-82430
Change-Id: I5aa17b3ff804e535a315acda7c9a97caccfafb8d
Reviewed-by: Christian Strømme <christian.stromme@qt.io>